# ada-burner-plutus

./: README.md  ada-burner-project.cabal  cabal.project  hie.yaml
src/ADABurner/: Burner.hs  Deploy.hs  TypedBurner.hs
testnet/: .gitignore  give.sh  grab.sh
