Cabal-Version:      2.4
Name:               ada-burner-project
Version:            0.1.0.0
Author:              TinitoDev
Maintainer:          tinitodev@gmail.com
Build-Type:          Simple
Copyright:           © 2021 TinitoDev
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     ADABurner.Deploy
                     , ADABurner.Burner
                     , ADABurner.TypedBurner
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , data-default
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
